--- a/Application/SolutionMoneyManager/MoneyManagerDesktop/Forms/Color/resColor.resx
+++ b/Application/SolutionMoneyManager/MoneyManagerDesktop/Forms/Color/resColor.resx
@@ -118,10 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="help_about32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\Resources\help_about32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="help_about64" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\Resources\help_about64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="colors32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\colors32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
