--- a/Application/SolutionMoneyManager/MoneyManagerDesktop/Forms/Users/resUsers.resx
+++ b/Application/SolutionMoneyManager/MoneyManagerDesktop/Forms/Users/resUsers.resx
@@ -118,6 +118,30 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="userDelete128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userDelete128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userDelete32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userDelete32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userNew128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userNew128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userNew32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userNew32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="users128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\users128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="users32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\users32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userUpdate128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userUpdate128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userUpdate32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userUpdate32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="User_accept16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\Resources\User_accept16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
