--- a/Application/SolutionMoneyManager/MoneyManagerDesktop/Forms/Users/resUsers.resx
+++ b/Application/SolutionMoneyManager/MoneyManagerDesktop/Forms/Users/resUsers.resx
@@ -148,4 +148,16 @@
   <data name="User_exclamation16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\Resources\User_exclamation16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="userFind128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userFind128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userFind32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\userFind32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="usersRestore128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\usersRestore128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="usersRestore32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Resources\usersRestore32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
